force-app/main/default/objects/Target_Company_Product__c/Target_Company_Product__c.object-meta.xml
<CustomObject>
    <description>What does this company offer</description>
    <label>Target Company Product</label>
    <nameField>
        <label>Target Company Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Target Company Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>