force-app/main/default/objects/Target_Company_Product__c/fields/Product_Features__c.field-meta.xml
<CustomField>
    <fullName>Product_Features__c</fullName>
    <label>Product Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Desktop Backup</fullName>
            </value>
            <value>
                <fullName>Web Access</fullName>
            </value>
            <value>
                <fullName>eMail Upload</fullName>
            </value>
            <value>
                <fullName>Fax Upload</fullName>
            </value>
            <value>
                <fullName>Large File Send</fullName>
            </value>
            <value>
                <fullName>File Sharing</fullName>
            </value>
            <value>
                <fullName>File Collaboration</fullName>
            </value>
            <value>
                <fullName>Encrypted Transport</fullName>
            </value>
            <value>
                <fullName>Encrypted Storage</fullName>
            </value>
            <value>
                <fullName>Private Key Encryption</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>