force-app/main/default/objects/Target_Company_Product__c/fields/Target_Company__c.field-meta.xml
<CustomField>
    <fullName>Target_Company__c</fullName>
    <label>Target Company</label>
    <referenceTo>SFDC_Target_Company__c</referenceTo>
    <relationshipLabel>Target Company Products</relationshipLabel>
    <relationshipName>Target_Company_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>