force-app/main/default/objects/Target_Company_Product__c/fields/Unique_Features__c.field-meta.xml
<CustomField>
    <fullName>Unique_Features__c</fullName>
    <label>Unique Features</label>
    <type>TextArea</type>
</CustomField>